# RestApiMocker

./: .gitignore  Cargo.toml  LICENSE  README.md  backend.Dockerfile  docker-compose.yaml  release.Dockerfile  release.Dockerfile.alpine
.github/workflows/: release.yml  tests.yml
api_test/: common_steps.py  conftest.py  pyproject.toml  test_basic_mocks.py  test_conditions.py  test_config.py  test_delete_mocks.py  test_history.py  test_path_params.py
api_test/features/: basic_mocks.feature  conditions.feature  config.feature  delete_mocks.feature  history.feature  path_params.feature
backend/: Cargo.toml
backend/src/: internal_routes.rs  main.rs  mock_route.rs  types.rs
frontend/: Cargo.toml  README.md
frontend/assets/styling/: home.css  main.css  mocks.css  navbar.css
frontend/src/: main.rs
frontend/src/requests/: mod.rs  ui_requests.rs  web_requests.rs
frontend/src/views/: home.rs  mock_config_modal.rs  mocks.rs  mod.rs  navbar.rs
libs/: Cargo.toml
libs/libcommon/: Cargo.toml
libs/libcommon/src/: lib.rs
test-proxy/: docker-compose.yaml  nginx.conf
