[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = [ "json" ] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.50.0"
libcommon = { path = "../libs/libcommon" }