[package]
name = "frontend"
version = "0.1.0"
authors = ["Julien Lopez <julien.lopez@stilla.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
libcommon = { path = "../libs/libcommon" }
reqwest = { version = "0.13.2", features = [ "json" ] }
web-sys = { version = "0.3", features = ["Window", "Location"] }
serde_json = "1.0.149"
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
